@@ -15,6 +15,8 @@
             Util timer: account for 'drift' in timer when adding new tasks if running it continuously
             Graphics: Allow 'scroll' method to only scroll inside clipRect
             Bangle.js: if we restart with home button held down, ignore the 'button up' event
+            Remove Graphics.drawImages from non-Bangle.js builds to free up space
+            Pico: Remove SHA512 from build to free up space
 
      2v09 : Bangle.js: increase default advertising interval from 375 to 200ms to ease connections
             Fix Math.acos for negative values (fix #1950)
